--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "next-auth": "^4.23.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
+    "shadcn-ui": "^0.8.0",
     "superjson": "^1.13.1",
     "zod": "^3.22.4"
   },
